--- a/gestionar_contactos/src/main/resources/co/edu/uniquindio/gestionar_contactos/GestionarContactos.fxml
+++ b/gestionar_contactos/src/main/resources/co/edu/uniquindio/gestionar_contactos/GestionarContactos.fxml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -15,9 +18,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="509.0" prefWidth="861.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.gestionar_contactos.Controller.GestionarContactosController">
+<AnchorPane prefHeight="647.0" prefWidth="981.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.gestionar_contactos.Controller.GestionarContactosController">
    <children>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -35,44 +38,135 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label text="Nombre" />
-                  <Label text="Apellido" GridPane.rowIndex="1" />
-                  <Label text="Número de teléfono" GridPane.rowIndex="2" />
-                  <Label text="Día de cumpleaños" GridPane.rowIndex="3" />
-                  <Label text="Email" GridPane.rowIndex="4" />
-                  <Label text="Foto de perfil" GridPane.rowIndex="5" />
-                  <TextField fx:id="txtNombre" GridPane.columnIndex="1" />
-                  <TextField fx:id="txtApellido" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextField fx:id="txtNumeroTelefono" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <TextField fx:id="txtEmail" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                  <DatePicker fx:id="DatePickerFechaCumpleaños" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Label text="Nombre" GridPane.halignment="CENTER">
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
+                  </Label>
+                  <Label text="Apellido" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
+                  </Label>
+                  <Label text="Número de teléfono" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
+                  </Label>
+                  <Label text="Día de cumpleaños" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
+                  </Label>
+                  <Label text="Email" GridPane.halignment="CENTER" GridPane.rowIndex="4">
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
+                  </Label>
+                  <TextField fx:id="txtNombre" prefHeight="26.0" prefWidth="172.0" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                     <GridPane.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </GridPane.margin>
+                  </TextField>
+                  <TextField fx:id="txtApellido" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </GridPane.margin>
+                  </TextField>
+                  <TextField fx:id="txtNumeroTelefono" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                     <GridPane.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </GridPane.margin>
+                  </TextField>
+                  <TextField fx:id="txtEmail" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4">
+                     <GridPane.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </GridPane.margin>
+                  </TextField>
+                  <DatePicker fx:id="DatePickerFechaCumpleaños" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+                  <Button fx:id="btnSeleccionarFotoPerfil" mnemonicParsing="false" onAction="#onSeleccionarFotoAction" stylesheets="@../../../../values/style.css" text="Seleccionar foto de perfil" GridPane.halignment="CENTER" GridPane.rowIndex="5">
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
+                     <styleClass>
+                        <String fx:value="search-button" />
+                        <String fx:value="shadow" />
+                     </styleClass>
+                  </Button>
+                  <ImageView fitHeight="89.0" fitWidth="139.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                </children>
             </GridPane>
-            <VBox alignment="TOP_RIGHT" prefHeight="510.0" prefWidth="627.0">
+            <VBox alignment="CENTER" prefHeight="510.0" prefWidth="627.0">
                <HBox.margin>
                   <Insets left="5.0" top="5.0" />
                </HBox.margin>
                <children>
-                  <ScrollPane prefHeight="349.0" prefWidth="407.0">
-                     <content>
-                        <TableView prefHeight="319.0" prefWidth="522.0">
-                          <columns>
-                            <TableColumn prefWidth="75.0" text="Nombre" />
-                            <TableColumn prefWidth="100.79998779296875" text="Apellido" />
-                              <TableColumn prefWidth="108.800048828125" text="Número" />
-                              <TableColumn prefWidth="92.0" text="Cumpleaños" />
-                              <TableColumn prefWidth="130.39996337890625" text="Email" />
-                          </columns>
-                        </TableView>
-                     </content>
-                  </ScrollPane>
+                  <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <Label contentDisplay="CENTER" text="Realizar Busqueda">
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Label>
+                        <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                           <children>
+                              <ChoiceBox fx:id="choiseBoxSeleccionarTipoBusqueda" prefHeight="26.0" prefWidth="177.0">
+                                 <HBox.margin>
+                                    <Insets left="20.0" />
+                                 </HBox.margin>
+                              </ChoiceBox>
+                              <Pane prefHeight="100.0" prefWidth="188.0" />
+                              <TextField fx:id="txtRealizarBusqueda" prefHeight="30.0" prefWidth="261.0" />
+                              <Button fx:id="btnRealizarBusqueda" mnemonicParsing="false" onAction="#onRealizarBusquedaAction" prefHeight="7.0" prefWidth="17.0" styleClass="transparent" stylesheets="@../../../../values/style.css">
+                                 <graphic>
+                                    <ImageView fitHeight="29.0" fitWidth="15.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../../../images/lupa.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                                 <HBox.margin>
+                                    <Insets right="10.0" />
+                                 </HBox.margin>
+                              </Button>
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+                  <TableView fx:id="tblContactos" prefHeight="348.0" prefWidth="579.0">
+                    <columns>
+                      <TableColumn fx:id="tbcNombre" prefWidth="107.2000122666359" text="Nombre" />
+                      <TableColumn fx:id="tbcApellido" prefWidth="120.00006103515625" text="Apellido" />
+                        <TableColumn fx:id="tbcNumero" prefWidth="97.59991455078125" text="Número" />
+                        <TableColumn fx:id="tbcCumpleanos" prefWidth="122.40008544921875" text="Cumpleaños" />
+                        <TableColumn fx:id="tbcEmail" prefWidth="132.7999267578125" text="Email" />
+                    </columns>
+                  </TableView>
                   <HBox alignment="CENTER" prefHeight="210.0" prefWidth="345.0">
                      <children>
-                        <Button mnemonicParsing="false" text="Agregar Contacto" />
+                        <Button fx:id="btnAgregarCliente" mnemonicParsing="false" onAction="#onAgregarContactoAction" stylesheets="@../../../../values/style.css" text="Agregar Contacto" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                           <styleClass>
+                              <String fx:value="verPedido-button" />
+                              <String fx:value="shadow" />
+                           </styleClass></Button>
                         <Pane prefHeight="186.0" prefWidth="70.0" />
-                        <Button mnemonicParsing="false" text="Actualizar Contacto" />
+                        <Button fx:id="btnActualizarContacto" mnemonicParsing="false" onAction="#onActualizarContactoAction" stylesheets="@../../../../values/style.css" text="Actualizar Contacto">
+                           <styleClass>
+                              <String fx:value="search-button" />
+                              <String fx:value="shadow" />
+                           </styleClass></Button>
                         <Pane prefHeight="186.0" prefWidth="64.0" />
-                        <Button mnemonicParsing="false" text="Eliminar Contacto" />
+                        <Button fx:id="btnEliminarContacto" mnemonicParsing="false" onAction="#onEliminarContactoAction" stylesheets="@../../../../values/style.css" text="Eliminar Contacto" textFill="WHITE">
+                           <styleClass>
+                              <String fx:value="volver-button" />
+                              <String fx:value="shadow" />
+                           </styleClass></Button>
                      </children>
                   </HBox>
                </children>
